# n8n_fast_api

./: My workflow fernanda.json  README.md  env.exemplo  main.py  pyproject.toml  requirements.txt
